update working windows version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.application.name=cloud
-spring.datasource.url=jdbc:mysql://localhost:3306/drafts
-spring.datasource.username=app
-spring.datasource.password=app
+spring.datasource.url=jdbc:mysql://localhost:3306/localhost
+spring.datasource.username=root
+spring.datasource.password=creator
+
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
